--- a/Manage-roles/Manage-Roles.html
+++ b/Manage-roles/Manage-Roles.html
@@ -338,7 +338,7 @@
                                             <button class="btn btn-danger btn-sm"><i class="fa-solid fa-xmark"></i></button>
                                         </td>
                                         <td>
-                                            <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
+                                            <button type="button" class="btn btn-outline-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
                                         </td>
                                     </tr>
                                     <!-- row end -->
@@ -353,7 +353,7 @@
                                             <button class="btn btn-danger btn-sm"><i class="fa-solid fa-xmark"></i></button>
                                         </td>
                                         <td>
-                                            <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
+                                            <button type="button" class="btn btn-outline-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
                                         </td>
                                     </tr>
                                     <!-- row end -->
@@ -368,7 +368,7 @@
                                             <button class="btn btn-danger btn-sm"><i class="fa-solid fa-xmark"></i></button>
                                         </td>
                                         <td>
-                                            <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
+                                            <button type="button" class="btn btn-outline-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
                                         </td>
                                     </tr>
                                     <!-- row end -->
@@ -383,7 +383,7 @@
                                             <button class="btn btn-danger btn-sm"><i class="fa-solid fa-xmark"></i></button>
                                         </td>
                                         <td>
-                                            <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
+                                            <button type="button" class="btn btn-outline-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
                                         </td>
                                     </tr>
                                     <!-- row end -->
@@ -398,7 +398,7 @@
                                             <button class="btn btn-danger btn-sm"><i class="fa-solid fa-xmark"></i></button>
                                         </td>
                                         <td>
-                                            <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
+                                            <button type="button" class="btn btn-outline-warning " data-bs-toggle="modal" data-bs-target="#ResetPassword-modal"><i class="fa-regular fa-pen-to-square me-1"></i>Reset Password</button>
                                         </td>
                                     </tr>
                                     <!-- row end -->
@@ -465,9 +465,9 @@
 
 
      <!-- Reset password Modal -->
-     <div class="modal pay-modal fade" id="ResetPassword-modal" tabindex="-1" aria-labelledby="staticBackdropLabel"
+     <div class="modal pay-modal fade bd-example-modal-sm" id="ResetPassword-modal" tabindex="-1" aria-labelledby="staticBackdropLabel"
      aria-hidden="true">
-     <div class="modal-dialog modal-dialog-centered">
+     <div class="modal-dialog modal-dialog-centered modal-sm">
          <div class="modal-content">
              <div class="modal-header">
                  <h5 class="modal-title" id="staticBackdropLabel">Reset Password</h5>
