Fraud scoring page design changes

--- a/Manage-roles/Manage-Roles.html
+++ b/Manage-roles/Manage-Roles.html
@@ -315,7 +315,7 @@
                 </div>
                 <!-- row end -->
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-xl-8 col-lg-9 col-md-10 ">
                         <div class="table-responsive manageRole-table">
                             <table class="table table-bordered">
                                 <thead>
