Fraud and Trast scoring page design changes

--- a/Scoring/Fraud-scoring.html
+++ b/Scoring/Fraud-scoring.html
@@ -314,7 +314,7 @@
             <!-- heading bar end -->
             <div class="py-main-contain">
                 <div class="row">
-                    <div class="col-xl-10 col-lg-10 col-md-10 mx-auto mainFraud-box">
+                    <div class="col-xl-12 col-lg-12 col-md-12 mx-auto mainFraud-box">
                         <div class="card">
                             <div class="card-header border-">
                                 <div class="row row-y">
@@ -322,8 +322,8 @@
                                         <h2 class="mb-0 text-primary">Fraud Scoring Item</h2>
                                     </div>
                                     <div class="col text-end">
-                                        <button type="button" class="btn btn-success btn-medium addScore-row" type="button"><i
-                                                class="fa-regular fa-square-plus me-1"></i>Add</button>
+                                        <button type="button" class="btn btn-success btn-medium addScore-row"
+                                            type="button"><i class="fa-regular fa-square-plus me-1"></i>Add row</button>
                                     </div>
                                 </div>
                             </div>
@@ -331,19 +331,23 @@
                                 <form action="" id="frDscore" method="">
                                     <div class="row titleFRd">
                                         <div class="form-group col">
-                                            <h2 for="" class="text-dark"><i class="fa-solid fa-layer-group"></i> Conditions</h2>
+                                            <h2 for="" class="text-dark"><i class="fa-solid fa-layer-group"></i>
+                                                Conditions</h2>
                                         </div>
                                         <div class="form-group col">
-                                            <h2 for="" class="text-dark"><i class="fa-solid fa-filter"></i> Options </h2>
+                                            <h2 for="" class="text-dark"><i class="fa-solid fa-filter"></i> Options
+                                            </h2>
                                         </div>
-                                        <div class="form-group col">
-                                            <h2 for="" class="text-dark"><i class="fa-solid fa-hands-holding-circle"></i> Value</h2>
+                                        <div class="form-group col-md-2">
+                                            <h2 for="" class="text-dark"><i
+                                                    class="fa-solid fa-hands-holding-circle"></i> Value</h2>
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <h2 for="" class="text-dark"><i class="fa-solid fa-star"></i> Score</h2>
                                         </div>
-                                        <div class="form-group col-xl-3 col-lg-4">
-                                            <h2 for="" class="text-dark"><i class="fa-solid fa-location-arrow"></i> Action</h2>
+                                        <div class="form-group col">
+                                            <h2 for="" class="text-dark"><i class="fa-solid fa-location-arrow"></i>
+                                                Action</h2>
                                         </div>
                                     </div>
                                     <!-- row end -->
@@ -376,21 +380,22 @@
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </div>
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <input type="text" class="form-control" name="fraud-score"
                                                 placeholder="enter value" />
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <input type="text" class="form-control" name="fraud-score"
                                                 placeholder="enter score" />
                                         </div>
-                                        <div class="form-group col-xl-3 col-lg-4">
-                                            <button class="btn btn-success btn-medium" type="button"><i
+                                        <div class="form-group col">
+                                            <button class="btn btn-success-light btn-medium addScr-tr" type="button"><i
                                                     class="fa-regular fa-square-plus me-1"></i>Add</button>
-                                            <button class="btn btn-warning btn-medium" type="button"><i
-                                                    class="fa-regular fa-pen-to-square"></i> Update</button>
-                                            <button class="btn btn-danger btn-medium" type="button"><i
-                                                    class="fa-solid fa-trash"></i> Delete</button>
+                                            <button class="btn btn-warning-light btn-medium updateScr-tr"
+                                                type="button"><i class="fa-regular fa-pen-to-square"></i>
+                                                Update</button>
+                                            <button class="btn btn-danger-light btn-medium deleteScr-tr"
+                                                type="button"><i class="fa-solid fa-trash"></i> Delete</button>
                                         </div>
                                     </div>
                                     <!-- row end -->
@@ -423,21 +428,22 @@
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </div>
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <input type="text" class="form-control" name="fraud-score"
                                                 placeholder="enter value" />
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <input type="text" class="form-control" name="fraud-score"
                                                 placeholder="enter score" />
                                         </div>
-                                        <div class="form-group col-xl-3 col-lg-4">
-                                            <button class="btn btn-success btn-medium" type="button"><i
+                                        <div class="form-group col">
+                                            <button class="btn btn-success-light btn-medium addScr-tr" type="button"><i
                                                     class="fa-regular fa-square-plus me-1"></i>Add</button>
-                                            <button class="btn btn-warning btn-medium" type="button"><i
-                                                    class="fa-regular fa-pen-to-square"></i> Update</button>
-                                            <button class="btn btn-danger btn-medium" type="button"><i
-                                                    class="fa-solid fa-trash"></i> Delete</button>
+                                            <button class="btn btn-warning-light btn-medium updateScr-tr"
+                                                type="button"><i class="fa-regular fa-pen-to-square"></i>
+                                                Update</button>
+                                            <button class="btn btn-danger-light btn-medium deleteScr-tr"
+                                                type="button"><i class="fa-solid fa-trash"></i> Delete</button>
                                         </div>
                                     </div>
                                     <!-- row end -->
@@ -470,21 +476,22 @@
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </div>
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <input type="text" class="form-control" name="fraud-score"
                                                 placeholder="enter value" />
                                         </div>
-                                        <div class="form-group col">
+                                        <div class="form-group col-md-2">
                                             <input type="text" class="form-control" name="fraud-score"
                                                 placeholder="enter score" />
                                         </div>
-                                        <div class="form-group col-xl-3 col-lg-4">
-                                            <button class="btn btn-success btn-medium" type="button"><i
+                                        <div class="form-group col">
+                                            <button class="btn btn-success-light btn-medium addScr-tr" type="button"><i
                                                     class="fa-regular fa-square-plus me-1"></i>Add</button>
-                                            <button class="btn btn-warning btn-medium" type="button"><i
-                                                    class="fa-regular fa-pen-to-square"></i> Update</button>
-                                            <button class="btn btn-danger btn-medium" type="button"><i
-                                                    class="fa-solid fa-trash"></i> Delete</button>
+                                            <button class="btn btn-warning-light btn-medium updateScr-tr"
+                                                type="button"><i class="fa-regular fa-pen-to-square"></i>
+                                                Update</button>
+                                            <button class="btn btn-danger-light btn-medium deleteScr-tr"
+                                                type="button"><i class="fa-solid fa-trash"></i> Delete</button>
                                         </div>
                                     </div>
                                     <!-- row end -->
@@ -504,6 +511,17 @@
     <script src="../assets/lib/fw/fontawesome.js"></script>
 
     <script src="../assets/js/layout.js"></script>
+    <script>
+        // ================= Add Row on button click  =================//
+        $(".addScore-row").on("click", function () {
+            var trRow = $("#frDscore .frdInputRow").last().clone(true);
+            trRow.appendTo($("#frDscore"));
+        });
+        //================== button click row remove =============//
+        $(".deleteScr-tr").on("click" , function(){
+            $(this).closest('.frdInputRow').remove();
+        });
+    </script>
 
 </body>
 
